Minor Codacy fixes, mostly explicit type declarations and some tabs in documentation.